moved location of vertical-rhythm utilities to utilities sass file. changed direction of dialog animation on larger screens. fixed layout issues found in lists. title sizing options. button-group margin fix

--- a/src/css/components/button-groups.scss
+++ b/src/css/components/button-groups.scss
@@ -4,6 +4,7 @@
   @include clearfix();
   > .btn {
     float: left;
+    margin-left: 0 !important;
     position: relative;
     border-radius: 0;
     border-left-width: 0;
