--- a/src/css/plugins/angular-ui.scss
+++ b/src/css/plugins/angular-ui.scss
@@ -73,8 +73,8 @@ div[datepicker] {
     }
   }
   .btn.btn {
-    padding-left: $unit-sm;
-    padding-right: $unit-sm;
+    padding-left: 9px;
+    padding-right: 9px;
     font-weight: normal;
   }
   .btn.btn[disabled] {
